--- a/client/index.html
+++ b/client/index.html
@@ -10,9 +10,9 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="./src/main.jsx"></script>
 
-  <h1>Hello World</h1>
+  <h1>Hello</h1>
 </body>
 
 </html>
